<?xml version="1.0"?>
<package format="3">
	<name>dr_eigen</name>
	<version>0.0.0</version>
	<description>The dr_eigen package</description>
	<license>all-rights-reserved</license>

	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

  	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>rclcpp</depend>
	<depend>geometry_msgs</depend>

	<test_depend>ament_lint_auto</test_depend>
  	<test_depend>stratom_lint_common</test_depend>

	<export>
    	<build_type>ament_cmake</build_type>
  	</export>
</package>
